Presigned upload "public read" setting is now configurable/must be explicitly specified