@@ -80,34 +80,42 @@ public class UploadManager {
 
 	@Nonnull
 	public PresignedUpload createPresignedUpload(@Nonnull String key,
-																							 @Nonnull String contentType) {
+																							 @Nonnull String contentType,
+																							 @Nonnull Boolean publicRead) {
 		requireNonNull(key);
 		requireNonNull(contentType);
+		requireNonNull(publicRead);
 
-		return createPresignedUpload(key, contentType, Collections.emptyMap());
+		return createPresignedUpload(key, contentType, publicRead, null);
 	}
 
 	@Nonnull
 	public PresignedUpload createPresignedUpload(@Nonnull String key,
 																							 @Nonnull String contentType,
+																							 @Nonnull Boolean publicRead,
 																							 @Nullable Map<String, String> metadata) {
 		requireNonNull(key);
 		requireNonNull(contentType);
+		requireNonNull(publicRead);
 
 		if (metadata == null)
-			metadata = Collections.emptyMap();
+			metadata = Map.of();
 
 		Instant expirationTimestamp = Instant.now().plus(getConfiguration().getAmazonS3PresignedUploadExpirationInMinutes(), MINUTES);
 
-		PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+		PutObjectRequest.Builder putObjectRequestBuilder = PutObjectRequest.builder()
 				.bucket(getConfiguration().getAmazonS3BucketName())
 				.key(key)
 				.contentType(contentType)
-				.acl(ObjectCannedACL.PUBLIC_READ)
-				.metadata(metadata.entrySet().stream().collect(Collectors.toMap(e -> format("x-amz-meta-%s", e.getKey()), Map.Entry::getValue)))
-				.build();
+				.metadata(metadata.entrySet().stream().collect(Collectors.toMap(e -> format("x-amz-meta-%s", e.getKey()), Map.Entry::getValue)));
+
+		if (publicRead)
+			putObjectRequestBuilder.acl(ObjectCannedACL.PUBLIC_READ);
+
+		PutObjectRequest putObjectRequest = putObjectRequestBuilder.build();
 
 		PutObjectPresignRequest presignRequest = PutObjectPresignRequest.builder()
+				// TODO: expiration should be configurable
 				.signatureDuration(Duration.ofMinutes(getConfiguration().getAmazonS3PresignedUploadExpirationInMinutes()))
 				.putObjectRequest(putObjectRequest)
 				.build();
@@ -119,7 +127,9 @@ public class UploadManager {
 		String url = presignedRequest.url().toString();
 
 		Map<String, String> finalMetadata = new HashMap<>(putObjectRequest.metadata());
-		finalMetadata.put("x-amz-acl", "public-read"); // If you do not include this header for ObjectCannedACL.PUBLIC_READ, you will get a 403
+
+		if (publicRead)
+			finalMetadata.put("x-amz-acl", "public-read"); // If you do not include this header for ObjectCannedACL.PUBLIC_READ, you will get a 403
 
 		return new PresignedUpload(HttpMethod.PUT.name(), url, contentType, expirationTimestamp, finalMetadata);
 	}
@@ -134,6 +144,7 @@ public class UploadManager {
 				.key(key)
 				.build();
 
+		// TODO: expiration should be configurable
 		GetObjectPresignRequest getObjectPresignRequest = GetObjectPresignRequest.builder()
 				.signatureDuration(Duration.ofMinutes(getConfiguration().getAmazonS3PresignedUploadExpirationInMinutes()))
 				.getObjectRequest(getObjectRequest)
@@ -148,9 +159,8 @@ public class UploadManager {
 		S3Presigner.Builder builder = S3Presigner.builder()
 				.region(getConfiguration().getAmazonS3Region());
 
-		if (getConfiguration().getAmazonUseLocalstack()) {
+		if (getConfiguration().getAmazonUseLocalstack())
 			builder.endpointOverride(URI.create(getConfiguration().getAmazonS3BaseUrl()));
-		}
 
 		return builder.build();
 	}
